Adjusted loader page and fixed overflow bug on navbar

--- a/src/components/Navbar/Activated.module.css
+++ b/src/components/Navbar/Activated.module.css
@@ -85,8 +85,6 @@
   text-align: center;
   margin-top: 2rem;
   padding-right: 0;
-  max-width: 100vw;
-  overflow-x: hidden;
 }
 
 .day {
@@ -126,6 +124,11 @@
 }
 
 @media (max-width: 790px) {
+
+  #container {
+    max-width: 100vw;
+    overflow-x: hidden;
+  }
 
   .menyAvPaa:checked ~ .burger > div:nth-child(1) {
     transform: translateY(11.2px) rotate(45deg);
